# Banana-Shop

./: .env.example  .gitignore  README.md  README_BACKUP.md  README_CONCISE.md  data.json  load_products.py  main.py  pyproject.toml
app/: __init__.py  database.py  schemas.py
app/models/: __init__.py
app/routers/: auth.py  products.py
app/services/: genai_service.py
app/utils/: auth.py  background_tasks.py  countries.py  image_cache.py
static/css/: style.css
static/js/: app.js
templates/: index.html  login.html  men.html  product.html  signup.html  women.html
